# DistributedBoxRedesigned

./: .gitignore  CMakeLists.txt  main.cpp
include/: Atom.hpp  Coordinate2D.hpp  Coordinate3D.hpp  CuboidStructureCalc.hpp  MoleculeBox.hpp  PeriodicNeighbourCalculator.hpp  Rectangle.hpp
include/hpx_box_component/: communicator.hpp
src/: Coordinate2D.cpp  CuboidNeighbourCalc.cpp  MoleculeBox.cpp  PeriodicNeighbourCalculator.cpp  Rectangle.cpp
tests/: CMakeLists.txt  test_cooridnate.cpp  test_cubic_neighbour.cpp  test_cuboid_calcs.cpp  test_molecule_box.cpp  test_prime_factors.cpp  test_rectangle.cpp
